# HelpingHireRecruiter

./: .gitignore  Project08_DeepAgents_Plan_Export.md  README.md  development.md  development_flow.md  docker-compose.yml  implementation_plan.md  instructions.md  project-execution.md  requirements-dev.txt  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt  test_langgraph_args.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_jobs_table.py  0002_update_jobs_table.py  2147d5ccb976_add_jd_intake_table.py  4e0ebb03221a_add_dynamic_llm_prompts_table.py  53a222838357_add_cv_score_table.py  5553bbc865da_add_candidate_application_table.py  67b4814dfba3_add_bias_report_table.py  af64af059063_add_users_table.py  d0c36eff53cb_add_jd_intake_id_fk_to_job_description.py  d8483ea748a7_add_candidate_table_for_cv_parsing.py  fd0452a90f51_add_skill_gap_report_table.py
backend/app/: main.py
backend/app/agents/: bias_detection_agent.py  cv_scoring_agent.py  decision_agent.py  jd_parser_agent.py
backend/app/api/: auth.py  candidate_application.py  cv_parsing.py  cv_scoring.py  jd_intake.py  job_description.py  schemas.py  skill_gap.py
backend/app/core/: config.py  llm.py  llm_prompt_keys.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: schemas.py  state.py
backend/app/prompts/: adaptive_scorer.py  critic.py  cv_scorer.py  decision_maker.py  jd_parser.py  skill_gap_analyzer.py  supporter.py
backend/app/retrieval/: chunking.py  hybrid.py  reranker.py  (+1 more)
backend/scripts/: seed_prompts.py
(+111 files in other folders)
